# learning-app

./: .gitignore  CMakeLists.txt  application.qrc  compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pinyin.cpp  pinyin.h  pinyinform.cpp  pinyinform.h  pinyinform.ui  settingsform.cpp  settingsform.h  settingsform.ui  tokenizer.cpp  tokenizer.h
