cmake_minimum_required(VERSION 3.16)

project(cihuishu VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
list(APPEND CMAKE_PREFIX_PATH "/home/menk/vcpkg/installed/x64-linux")

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets LinguistTools)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets LinguistTools)
find_package(cpp-pinyin CONFIG REQUIRED)


set(TS_FILES cihuishu_en_US.ts)

set(PROJECT_SOURCES
        application.qrc
        main.cpp
        mainwindow.cpp
        mainwindow.h
        mainwindow.ui
        pinyinform.h
        pinyinform.cpp
        ${TS_FILES}
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
qt_add_executable(cihuishu
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
        settingsform.h settingsform.cpp settingsform.ui pinyin.h pinyin.cpp
        tokenizer.h tokenizer.cpp
        pinyinform.h pinyinform.cpp
    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET cihuishu APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation

    qt_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
else()
    if(ANDROID)
        add_library(cihuishu SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(cihuishu
            ${PROJECT_SOURCES}
        )
    endif()

    qt5_create_translation(QM_FILES ${CMAKE_SOURCE_DIR} ${TS_FILES})
endif()

add_custom_command(TARGET cihuishu POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
        "${CMAKE_SOURCE_DIR}/dict"
        "$<TARGET_FILE_DIR:cihuishu>/dict"
)
target_link_libraries(cihuishu PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
target_link_libraries(cihuishu PRIVATE cpp-pinyin::cpp-pinyin)
target_include_directories(cihuishu PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/include")

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
if(${QT_VERSION} VERSION_LESS 6.1.0)
  set(BUNDLE_ID_OPTION MACOSX_BUNDLE_GUI_IDENTIFIER com.example.cihuishu)
endif()
set_target_properties(cihuishu PROPERTIES
    ${BUNDLE_ID_OPTION}
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

find_package(Qt6 REQUIRED COMPONENTS Core Widgets Network) # Qt6
# or:
# find_package(Qt5 REQUIRED COMPONENTS Core Widgets Network)

target_link_libraries(cihuishu PRIVATE
    Qt6::Core
    Qt6::Widgets
    Qt6::Network
)

include(GNUInstallDirs)
install(TARGETS cihuishu
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(cihuishu)
endif()
